--- a/devengacion-inventarios/src/main/resources/application.properties
+++ b/devengacion-inventarios/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=devengacion-inventarios
-spring.datasource.url=jdbc:postgresql://localhost:5440/db_gestorInventarios
+spring.datasource.url=jdbc:postgresql://localhost:5480/db_gestorInventarios
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=public
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
