--- a/devengacion-inventarios/src/main/resources/application.properties
+++ b/devengacion-inventarios/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.properties.hibernate.default_schema=public
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
